# budget-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/budget_app/: budget.py  chart.py  main.py  total.py
tests/: test_module.py  tmodule_test.py
